--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.3",
+    "express": "^4.15.2",
     "express-bearer-token": "^2.1.0"
   },
   "devDependencies": {}
