--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wheather-api",
+  "name": "react-workshop-weather-app-api",
   "version": "0.0.1",
   "engines": {
     "node": ">=7.9.0"
